--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <div class="search-container">
-            Búsqueda datos Midea
+            Búsqueda datos Levapan
             <br>
             <button id="darkModeToggle" class="btn btn-dark">🌙 Modo claro</button>
 
